--- a/main.tex
+++ b/main.tex
@@ -253,13 +253,13 @@ Given that the SAP encompasses broad genetic diversity, we next evaluated lipid 
 
 To resolve \emph{relative} reallocations among major lipid pools, rather than absolute abundance differences that may be confounded by run-to-run intensity scaling, we aggregated individual molecular species into lipid classes (galactolipids, phospholipids, lysophospholipids, and neutral glycerolipids) and computed all pairwise class ratios on a log$_{10}$ scale. An OPLS-DA model constructed from these ratios clearly discriminated Control from LowInput samples along the predictive component (Fig.~\ref{fig:fig2_opls_da}A), indicating that the LowInput lipidome is characterized by systematic \emph{rebalancing} among lipid classes. Model diagnostics indicated robust classification performance (1 predictive and 1 orthogonal component; $Q^2_{\mathrm{cum}}=0.977$, $R^2Y_{\mathrm{cum}}=0.977$, $R^2X_{\mathrm{cum}}=0.643$; Fig.~\ref{fig:fig2_opls_da}D), and a label-permutation test (n=200) located the observed model performance at the extreme tail of the corresponding null distributions (Fig.~\ref{fig:fig2_opls_da}C), consistent with a stable, non-overfitted multivariate pattern.
 
-VIP-ranked ratios (VIP $>$ 1) revealed a highly structured pattern delineating which lipid pools most strongly discriminate Control from LowInput samples (Fig.~\ref{fig:fig2_opls_da}B; Supplemental Fig.~S7A). First, many of the highest-ranking ratios were anchored on SQDG (e.g., MG/SQDG, PS/SQDG, PG/SQDG, PE/SQDG, PC/SQDG, LPE/SQDG), and these ratios were consistently elevated in LowInput (Supplemental Fig.~S7A), indicating a depletion of SQDG \emph{relative to multiple membrane-associated and neutral lipid pools}. This observation is concordant with the class-level profile, in which SQDG abundance decreases under LowInput conditions, whereas several other lipid classes (such as TG and, to a lesser extent, PS) exhibit relative enrichment (Fig.~1B; Supplemental Fig.~S2). Second, PS emerged as a central node in the remodeling landscape as multiple ratios with PS in the denominator (PC/PS, PE/PS, PG/PS, PA/PS, DG/PS, DGDG/PS, LPC/PS) were elevated in Control (Supplemental Fig.~S7A), implying that the LowInput condition is characterized by \emph{increased PS abundance relative to a broad spectrum of other lipid classes}. Collectively, the SQDG- and PS-centered ratios describe a LowInput-associated remodeling axis defined by (i) reduced representation of sulfolipids and (ii) a coordinated redistribution across the membrane lipid headgroup landscape.
+VIP-ranked ratios (VIP $>$ 1) revealed a highly structured pattern delineating which lipid pools most strongly discriminate Control from LowInput samples (Fig.~\ref{fig:fig2_opls_da}B; Supplementary Fig.~\ref{fig:suppfig_s7_ratios}A; Supplementary Table~S6). First, many of the highest-ranking ratios were anchored on SQDG (e.g., MG/SQDG, PS/SQDG, PG/SQDG, PE/SQDG, PC/SQDG, LPE/SQDG), and these ratios were consistently elevated in LowInput (Supplementary Fig.~\ref{fig:suppfig_s7_ratios}A), indicating a depletion of SQDG \emph{relative to multiple membrane-associated and neutral lipid pools}. This observation is concordant with the class-level profile, in which SQDG abundance decreases under LowInput conditions, whereas several other lipid classes (such as TG and, to a lesser extent, PS) exhibit relative enrichment (Fig.~\ref{fig:fig1_lipidomics_landscape}B; Supplementary Fig.~\ref{fig:suppfig_s2_composition}). Second, PS emerged as a central node in the remodeling landscape as multiple ratios with PS in the denominator (PC/PS, PE/PS, PG/PS, PA/PS, DG/PS, DGDG/PS, LPC/PS) were elevated in Control (Supplementary Fig.~\ref{fig:suppfig_s7_ratios}A), implying that the LowInput condition is characterized by \emph{increased PS abundance relative to a broad spectrum of other lipid classes}. Collectively, the SQDG- and PS-centered ratios describe a LowInput-associated remodeling axis defined by (i) reduced representation of sulfolipids and (ii) a coordinated redistribution across the membrane lipid headgroup landscape.
 
 Beyond these two anchors, the VIP set also highlighted interpretable ``transition-like'' relationships among neutral and membrane pools. Several MG-centered ratios increased in LowInput (MG/MGDG, MG/SQDG, MG/PG), while DG/MG and DGDG/MG were higher in Control (Supplementary Fig.~\ref{fig:suppfig_s7_ratios}A), indicating that LowInput shifts the balance toward higher MG relative to both DG and galactolipids. In parallel, SQDG/TG was higher in Control (Supplementary Fig.~\ref{fig:suppfig_s7_ratios}A), consistent with the expansion of TG observed in class composition summaries and the chemical-space displacement of TG under LowInput (Fig.~\ref{fig:fig1_lipidomics_landscape}C; Supplementary Fig.~\ref{fig:suppfig_s2_composition}). While ratio data do not directly measure metabolic flux, the \emph{direction-consistent} behavior of these ratios supports a coherent LowInput program in which plastid-associated glycolipids/sulfolipids are reduced relative to neutral storage and selected membrane pools.
 
-To further motivate the use of ratios that capture condition-dependent \emph{rewiring} among lipid classes, we quantified partial correlations (controlling for total TIC) within each environment (Supplemental Fig.~S6). Numerous lipid-class pairs exhibited sign reversals in their partial correlations between Control and LowInput, indicating altered coordination among lipid pools under LowInput-associated stress. Ratios constructed from these sign-flip relationships displayed pronounced and directionally consistent shifts across conditions (Supplemental Fig.~S7B). Most significantly, TG increased in relative abundance compared with PE, MGDG, DG, and (in several cases) DGDG under LowInput (TG/PE, TG/MGDG, TG/DG; Supplemental Fig.~S7B), supporting a model of membrane-to-storage redistribution in which DG likely functions as a biosynthetic intermediate toward TG accumulation. In contrast, the TG/MG ratio was elevated in Control (Supplemental Fig.~S7B), indicating that MG increased disproportionately relative to TG under LowInput, consistent with the MG-centered VIP ratios described above (Supplemental Fig.~S7A). PS-centered partial-correlation ratios additionally supported a redistribution of headgroup classes. For example, PS/PC, PS/DG, and PS/MGDG were elevated in LowInput (Supplemental Fig.~S7B), paralleling the reciprocal pattern observed in the VIP analysis (PC/PS and DG/PS enriched in Control; Supplemental Fig.~S7A). Finally, lysophospholipid ratios indicated a reproducible shift in lyso-lipid balance as shown by LPC/LPE and LPC/PS being higher in Control, whereas LowInput favored LPE relative to multiple denominators (e.g., LPE/SQDG; LPE/MGDG; Supplemental Fig.~S7A). These patterns are consistent with stress-associated remodeling of phospholipid turnover pathways (e.g., PC→LPC and PE→LPE branches) rather than a uniform, condition-wide change in total lysolipid abundance (ref).
+To further motivate the use of ratios that capture condition-dependent \emph{rewiring} among lipid classes, we quantified partial correlations (controlling for total TIC) within each environment (Supplementary Fig.~\ref{fig:suppfig_s6_partial_corr}). Numerous lipid-class pairs exhibited sign reversals in their partial correlations between Control and LowInput, indicating altered coordination among lipid pools under LowInput-associated stress. Ratios constructed from these sign-flip relationships displayed pronounced and directionally consistent shifts across conditions (Supplementary Fig.~\ref{fig:suppfig_s7_ratios}B). Most significantly, TG increased in relative abundance compared with PE, MGDG, DG, and (in several cases) DGDG under LowInput (TG/PE, TG/MGDG, TG/DG; Supplementary Fig.~\ref{fig:suppfig_s7_ratios}B), supporting a model of membrane-to-storage redistribution in which DG likely functions as a biosynthetic intermediate toward TG accumulation. In contrast, the TG/MG ratio was elevated in Control (Supplementary Fig.~\ref{fig:suppfig_s7_ratios}B), indicating that MG increased disproportionately relative to TG under LowInput, consistent with the MG-centered VIP ratios described above (Supplementary Fig.~\ref{fig:suppfig_s7_ratios}A). PS-centered partial-correlation ratios additionally supported a redistribution of headgroup classes. For example, PS/PC, PS/DG, and PS/MGDG were elevated in LowInput (Supplementary Fig.~\ref{fig:suppfig_s7_ratios}B), paralleling the reciprocal pattern observed in the VIP analysis (PC/PS and DG/PS enriched in Control; Supplementary Fig.~\ref{fig:suppfig_s7_ratios}A). Finally, lysophospholipid ratios indicated a reproducible shift in lyso-lipid balance as shown by LPC/LPE and LPC/PS being higher in Control, whereas LowInput favored LPE relative to multiple denominators (e.g., LPE/SQDG; LPE/MGDG; Supplementary Fig.~\ref{fig:suppfig_s7_ratios}A). These patterns are consistent with stress-associated remodeling of phospholipid turnover pathways (e.g., PC$\rightarrow$LPC and PE$\rightarrow$LPE branches) rather than a uniform, condition-wide change in total lysolipid abundance.
 
-Thus, the ratio-based analyses converge on four biologically interpretable LowInput-associated lipid signatures that refine and extend the class-composition findings: (i) a broad depletion of SQDG relative to multiple lipid pools (consistent with the SQDG reduction in the global lipidome), (ii) a relative enrichment of PS within the phospholipid network (in line with the emergence of PS as a prominent class in compositional contrasts), (iii) an increase in TG relative to membrane lipids and DG (in line with the LowInput-linked expansion and chemical-space displacement of TG), and (iv) a reproducible lysophospholipid remodeling signal, with LPE increasing relative to multiple membrane pools and a reduced LPC/LPE balance, consistent with stress-responsive phospholipid turnover (PC$\rightarrow$LPC and PE$\rightarrow$LPE branches) rather than uniform scaling of total lyso-lipid abundance (ref). These coordinated patterns yield a concise representation of the lipid pools that increase relative to others and motivate targeted follow-up investigations into plastid membrane remodeling, phospholipid headgroup rebalancing, lysophospholipid turnover, and DG-to-TG conversion underlying storage lipid accumulation under LowInput field stress.
+Thus, the ratio-based analyses converge on four biologically interpretable LowInput-associated lipid signatures that refine and extend the class-composition findings: (i) a broad depletion of SQDG relative to multiple lipid pools (consistent with the SQDG reduction in the global lipidome), (ii) a relative enrichment of PS within the phospholipid network (in line with the emergence of PS as a prominent class in compositional contrasts), (iii) an increase in TG relative to membrane lipids and DG (in line with the LowInput-linked expansion and chemical-space displacement of TG), and (iv) a reproducible lysophospholipid remodeling signal, with LPE increasing relative to multiple membrane pools and a reduced LPC/LPE balance, consistent with stress-responsive phospholipid turnover (PC$\rightarrow$LPC and PE$\rightarrow$LPE branches) rather than uniform scaling of total lyso-lipid abundance. These coordinated patterns yield a concise representation of the lipid pools that increase relative to others and motivate targeted follow-up investigations into plastid membrane remodeling, phospholipid headgroup rebalancing, lysophospholipid turnover, and DG-to-TG conversion underlying storage lipid accumulation under LowInput field stress.
 
 
 \subsection*{Genome-wide association studies identify candidate genes for lipid remodeling}
